Optimised matchinfolist api calls, styling bug fixes Batch calls for apis to save time on the calls, added scroller on dashboard to prevent shift, added exceptions names when retrieving some champion background images

--- a/src/App.css
+++ b/src/App.css
@@ -440,12 +440,13 @@ select:focus {
 }
 
 #summonerIcon {
-  width: auto;
-  height: auto;
+  width: 120px;
+  height: 120px;
+  border: 1px solid #c89b3c;
+  border-radius: 7%;
 }
 
 #summonerIcon img {
-  border: 1px solid #c89b3c;
   border-radius: 7%;
 }
 
@@ -798,6 +799,8 @@ img {
 .championImage img {
   z-index: 0;
   border: 2px solid #383838;
+  width: 85px;
+  height: 85px;
 }
 
 .spellsAndRunesContainer {
@@ -853,10 +856,6 @@ img {
   font-size: 16px;
 }
 
-.otherPlayers img {
-  width: 30px;
-  height: 30px;
-}
 
 .player {
   position: relative;
